Fixed main and styles after merge
Several lines were duplicated and some class(?) names had to be changed to avoid overlap.

--- a/styles.css
+++ b/styles.css
@@ -332,7 +332,7 @@ section {
   box-sizing: border-box;
 }
 
-.calendar__hour.active {
+.calendar__hour.current {
   position: relative;
 
   color: var(--hi-primary);
@@ -341,7 +341,7 @@ section {
   box-sizing: border-box;
 }
 
-.calendar__hour.active::before {
+.calendar__hour.current::before {
   content: "";
 
   position: absolute;
@@ -405,6 +405,7 @@ section {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
 
 .collapsible {
   background-color: #eee;
